--- a/material_sphinx_theme/material_sphinx_theme/globaltoc.html
+++ b/material_sphinx_theme/material_sphinx_theme/globaltoc.html
@@ -1,11 +1,6 @@
-
-<div class="sidebar-block">
-  <div class="sidebar-toc">
-    {% set toctree = toctree(maxdepth=theme_globaltoc_depth|toint, collapse=theme_globaltoc_collapse|tobool, includehidden=theme_globaltoc_includehidden|tobool) %}
-    {% if toctree %}
-      {{ toctree }}
-    {% else %}
-      {{ toc }}
-    {% endif %}
-  </div>
-</div>
+{% set toctree = toctree(maxdepth=theme_globaltoc_depth|toint, collapse=theme_globaltoc_collapse|tobool, includehidden=theme_globaltoc_includehidden|tobool) %}
+{% if toctree %}
+  {{ toctree_format(toctree) }}
+{% else %}
+  {{ toc_format(toc) }}
+{% endif %}
