--- a/material_sphinx_theme/material_sphinx_theme/layout.html
+++ b/material_sphinx_theme/material_sphinx_theme/layout.html
@@ -227,7 +227,7 @@
                     {% include "localtoc.html" %}
                 {% endblock %}
                 <div class="md-content">
-                    <article class="md-content__inner md-typeset">
+                    <article class="md-content__inner md-typeset" role="main">
                         {% block body %} {% endblock %}
                     </article>
                 </div>
