--- a/sphinx_material/sphinx_material/searchbox.html
+++ b/sphinx_material/sphinx_material/searchbox.html
@@ -3,7 +3,7 @@
   <div class="md-search__inner" role="search">
     <form class="md-search__form" action="{{ pathto('search') }}" method="GET" role="form"
           name="search">
-      <input type="text" class="md-search__input" name="query" placeholder="Search"
+      <input type="text" class="md-search__input" name="q" placeholder="Search"
              autocapitalize="off" autocorrect="off" autocomplete="off" spellcheck="false"
              data-md-component="query" data-md-state="active">
       <label class="md-icon md-search__icon" for="__search"></label>
