--- a/sphinx_material/sphinx_material/header.html
+++ b/sphinx_material/sphinx_material/header.html
@@ -4,7 +4,7 @@
       <div class="md-flex__cell md-flex__cell--shrink">
         <a href="{{ pathto(master_doc) }}" title="{{ docstitle }}"
            class="md-header-nav__button md-logo">
-          {% if theme_logo_icon %}
+          {% if theme_logo_icon|e %}
             <i class="md-icon">{{ theme_logo_icon }}</i>
           {% elif logo %}
               <img src="{{ pathto('_static/' ~ logo, 1) }}" width="28" height="28"
