--- a/sphinx_material/sphinx_material/relbar.html
+++ b/sphinx_material/sphinx_material/relbar.html
@@ -1,10 +1,18 @@
-{%- if parents %}
+{%- if parents or theme_master_doc or theme_nav_links %}
   <nav class="md-tabs" data-md-component="tabs">
     <div class="md-tabs__inner md-grid">
       <ul class="md-tabs__list">
+        {%- block rootrellink %}
+          {%- if theme_master_doc %}
+          <li class="md-tabs__item"><a href="{{ pathto(master_doc) }}" class="md-tabs__link">{{ shorttitle|e }}</a></li>
+          {%- endif %}
+        {%- endblock %}
+        {%- for item in theme_nav_links %}
+            {% set localhref=pathto( item.href ) if item.internal else item.href|e %}
+            <li class="md-tabs__item"><a href="{{ localhref }}" class="md-tabs__link">{{ item.title }}</a></li>
+        {%- endfor %}
         {%- for parent in parents %}
-          <li class="md-tabs__item"><a href="{{ parent.link|e }}"
-                                       class="md-tabs__link">{{ parent.title }}</a></li>
+          <li class="md-tabs__item"><a href="{{ parent.link|e }}" class="md-tabs__link">{{ parent.title }}</a></li>
         {%- endfor %}
       </ul>
     </div>
