ENH: Add a block for hero content

--- a/sphinx_material/sphinx_material/layout.html
+++ b/sphinx_material/sphinx_material/layout.html
@@ -84,6 +84,7 @@
 
 {%- block content %}
   <div class="md-container">
+    {%- block hero %}{% endblock %}
     {% include "relbar.html" %}
     <main class="md-main">
       <div class="md-main__inner md-grid" data-md-component="container">
