ENH: Remove errors in W3C
Remove errors

--- a/sphinx_material/sphinx_material/localtoc.html
+++ b/sphinx_material/sphinx_material/localtoc.html
@@ -13,6 +13,8 @@
         </li>
       {%- endfor %}
     {%- endif %}
+    {%- if include_searchbox %}
     {% include "sourcelink.html" %}
+    {%- endif %}
   </ul>
 </nav>
