--- a/sphinx_material/sphinx_material/layout.html
+++ b/sphinx_material/sphinx_material/layout.html
@@ -22,7 +22,7 @@
   {% block font %}
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="">
     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Roboto+Mono&display=fallback">
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700%7CRoboto+Mono&display=fallback">
 
     <style>
       body,
@@ -70,10 +70,8 @@
       </svg>
     </defs>
   </svg>
-  <input class="md-toggle" data-md-toggle="drawer" type="checkbox" id="__drawer"
-         autocomplete="off">
-  <input class="md-toggle" data-md-toggle="search" type="checkbox" id="__search"
-         autocomplete="off">
+  <input class="md-toggle" data-md-toggle="drawer" type="checkbox" id="__drawer">
+  <input class="md-toggle" data-md-toggle="search" type="checkbox" id="__search">
   <label class="md-overlay" data-md-component="overlay" for="__drawer"></label>
   <a href="#{{ pagename }}" tabindex="1" class="md-skip"> Skip to content </a>
   {% include "header.html" %}
