--- a/sphinx_material/sphinx_material/searchbox.html
+++ b/sphinx_material/sphinx_material/searchbox.html
@@ -1,10 +1,9 @@
 <div class="md-search" data-md-component="search" role="dialog">
   <label class="md-search__overlay" for="__search"></label>
   <div class="md-search__inner" role="search">
-    <form class="md-search__form" action="{{ pathto('search') }}" method="GET" role="form"
-          name="search">
+    <form class="md-search__form" action="{{ pathto('search') }}" method="GET" name="search">
       <input type="text" class="md-search__input" name="q" placeholder="Search"
-             autocapitalize="off" autocorrect="off" autocomplete="off" spellcheck="false"
+             autocapitalize="off" autocomplete="off" spellcheck="false"
              data-md-component="query" data-md-state="active">
       <label class="md-icon md-search__icon" for="__search"></label>
       <button type="reset" class="md-icon md-search__icon" data-md-component="reset" tabindex="-1">
