--- a/sphinx_material/sphinx_material/relbar.html
+++ b/sphinx_material/sphinx_material/relbar.html
@@ -1,4 +1,4 @@
-{%- if parents or theme_master_doc or theme_nav_links %}
+{%- if nav_bar_tabs %}
   <nav class="md-tabs" data-md-component="tabs">
     <div class="md-tabs__inner md-grid">
       <ul class="md-tabs__list">
