ENH: Improve notebook generation
Improve appearance of jupyter notebooks

--- a/sphinx_material/sphinx_material/layout.html
+++ b/sphinx_material/sphinx_material/layout.html
@@ -1,5 +1,7 @@
 {%- extends "basic/layout.html" %}
 
+{% set sphinx_material_include_searchbox=True %}
+
 {%- block body_tag %}
   <body dir=ltr
         data-md-color-primary={{ theme_color_primary }} data-md-color-accent={{ theme_color_accent }}>
