--- a/sphinx_material/sphinx_material/localtoc.html
+++ b/sphinx_material/sphinx_material/localtoc.html
@@ -15,7 +15,7 @@
         </li>
       {%- endfor %}
     {%- endif %}
-    {%- if include_searchbox %}
+    {%- if show_source %}
     {% include "sourcelink.html" %}
     {%- endif %}
   </ul>
