ENH: Add ability to remove search and toc

--- a/sphinx_material/sphinx_material/searchbox.html
+++ b/sphinx_material/sphinx_material/searchbox.html
@@ -1,3 +1,4 @@
+{% if sidebars and 'searchbox.html' in sidebars %}
 <div class="md-search" data-md-component="search" role="dialog">
   <label class="md-search__overlay" for="__search"></label>
   <div class="md-search__inner" role="search">
@@ -22,3 +23,4 @@
     </div>
   </div>
 </div>
+{% endif %}
