Add version dropdown

--- a/sphinx_material/sphinx_material/header.html
+++ b/sphinx_material/sphinx_material/header.html
@@ -1,6 +1,6 @@
 <header class="md-header" data-md-component="header">
   <nav class="md-header-nav md-grid">
-    <div class="md-flex">
+    <div class="md-flex navheader">
       <div class="md-flex__cell md-flex__cell--shrink">
         <a href="{{ pathto(master_doc) }}" title="{{ docstitle }}"
            class="md-header-nav__button md-logo">
