--- a/sphinx_material/sphinx_material/layout.html
+++ b/sphinx_material/sphinx_material/layout.html
@@ -187,7 +187,7 @@
   </footer>
   {%- block footer_scripts %}
   <script src="{{ pathto('_static/javascripts/application.js', 1) }}"></script>
+  <script src="{{ pathto('_static/javascripts/dropdown.js', 1) }}"></script>
   <script>app.initialize({version: "1.0.4", url: {base: ".."}})</script>
   {%- endblock %}
 {%- endblock %}
-
