--- a/sphinx_material/sphinx_material/layout.html
+++ b/sphinx_material/sphinx_material/layout.html
@@ -211,7 +211,7 @@
         for (var i = 0; i < versions.length; i++) {
           var a = document.createElement("a");
           a.innerHTML = versions[i][1];
-          a.href = "../" + versions[i][0] + "/index.html";
+          a.href = "{{ pathto('../', 1) }}" + versions[i][0] + "/index.html";
           a.title = versions[i][1];
           $(".dropdown-content").append(a);
         };
