--- a/sphinx_material/sphinx_material/layout.html
+++ b/sphinx_material/sphinx_material/layout.html
@@ -188,35 +188,12 @@
   {%- block footer_scripts %}
   <script src="{{ pathto('_static/javascripts/application.js', 1) }}"></script>
   {% if theme_version_dropdown %}
+    <script src="{{ pathto('_static/javascripts/version_dropdown.js', 1) }}"></script>
     <script>
-    $(document).ready(function() {
-      $.getJSON("{{ pathto('../versions.json', 1) }}", function(versions) {
-        var dropdown = document.createElement("div");
-        dropdown.className = "md-flex__cell md-flex__cell--shrink dropdown";
-        var button = document.createElement("button");
-        button.className = "dropdownbutton";
-        button.innerHTML = "Other Versions";
-        var content = document.createElement("div");
-        content.className = "dropdown-content";
-        dropdown.appendChild(button);
-        dropdown.appendChild(content);
-        $(".navheader").append(dropdown);
-        for (var i = 0; i < versions.length; i++) {
-          if (versions[i].substring(0, 1) == "v") {
-            versions[i] = [versions[i], versions[i].substring(1)];
-          } else {
-            versions[i] = [versions[i], versions[i]];
-          };
-        };
-        for (var i = 0; i < versions.length; i++) {
-          var a = document.createElement("a");
-          a.innerHTML = versions[i][1];
-          a.href = "{{ pathto('../', 1) }}" + versions[i][0] + "/index.html";
-          a.title = versions[i][1];
-          $(".dropdown-content").append(a);
-        };
-      });
-    });
+      var json_loc = "{{ pathto('../versions.json', 1) }}",
+          target_loc = "{{ pathto('../', 1) }}"
+          text = "{{ theme_version_dropdown_text }}"
+      $( document ).ready( add_version_dropdown(json_loc, target_loc, text));
     </script>
   {% endif %}
   <script>app.initialize({version: "1.0.4", url: {base: ".."}})</script>
