--- a/sphinx_material/sphinx_material/layout.html
+++ b/sphinx_material/sphinx_material/layout.html
@@ -64,8 +64,8 @@
     <script src="{{ pathto('_static/javascripts/version_dropdown.js', 1) }}"></script>
     <script>
       var json_loc = "{{ pathto('../versions.json', 1) }}",
-          target_loc = "{{ pathto('../', 1) }}"
-          text = "{{ theme_version_dropdown_text }}"
+          target_loc = "{{ pathto('../', 1) }}",
+          text = "{{ theme_version_dropdown_text }}";
       $( document ).ready( add_version_dropdown(json_loc, target_loc, text));
     </script>
   {% endif %}
