ENH: Add more examples
Add examples, including broken ones

--- a/sphinx_material/sphinx_material/logo-text.html
+++ b/sphinx_material/sphinx_material/logo-text.html
@@ -1,1 +1,1 @@
-<a href="{{ homepage() }}" class="text-logo">{{ theme_project_nav_name or shorttitle }}</a>
+<a href="{{ homepage()|e }}" class="text-logo">{{ theme_project_nav_name or shorttitle }}</a>
