--- a/sphinx_material/sphinx_material/layout.html
+++ b/sphinx_material/sphinx_material/layout.html
@@ -136,7 +136,7 @@
               <div class="md-flex__cell md-flex__cell--stretch md-footer-nav__title">
                 <span class="md-flex__ellipsis">
                   <span
-                      class="md-footer-nav__direction"> Previous </span> {{ prev.title|striptags }} </span>
+                      class="md-footer-nav__direction"> Previous </span> {{ prev.title }} </span>
               </div>
             </a>
           {% endif %}
@@ -146,7 +146,7 @@
                rel="next">
             <div class="md-flex__cell md-flex__cell--stretch md-footer-nav__title"><span
                 class="md-flex__ellipsis"> <span
-                class="md-footer-nav__direction"> Next </span> {{ next.title|striptags }} </span>
+                class="md-footer-nav__direction"> Next </span> {{ next.title }} </span>
             </div>
             <div class="md-flex__cell md-flex__cell--shrink"><i
                 class="md-icon md-icon--arrow-forward md-footer-nav__button"></i>
