--- a/sphinx_material/sphinx_material/version_dropdown.html
+++ b/sphinx_material/sphinx_material/version_dropdown.html
@@ -4,8 +4,7 @@
     <button class="dropdownbutton">{{ theme_version_dropdown_text }}</button>
     <div class="dropdown-content md-hero">
       {%- for title, href in theme_version_info.items() %}
-          {%  set url = pathto(master_doc) if href == "" else href %}
-          <a title="{{ title|striptags|e }}" href="{{ url|e }}">{{ title }}</a>
+          <a title="{{ title|striptags|e }}" href="{{ href|e }}">{{ title }}</a>
       {% endfor %}
     </div>
   </div>
