Add an option to include or not the links to parents at nav bar
This PR introduces new theme config option 'nav_bar_display_parents'
that takes control of diplaying links to parent documents (in terms of
TOC) at navigation bar.

Changes to default behavior:

* nothing is changes, since the default value is True

--- a/sphinx_material/sphinx_material/relbar.html
+++ b/sphinx_material/sphinx_material/relbar.html
@@ -11,9 +11,11 @@
             {% set localhref=pathto( item.href ) if item.internal else item.href|e %}
             <li class="md-tabs__item"><a href="{{ localhref|e }}" class="md-tabs__link">{{ item.title }}</a></li>
         {%- endfor %}
-        {%- for parent in parents %}
-          <li class="md-tabs__item"><a href="{{ parent.link|e }}" class="md-tabs__link">{{ parent.title }}</a></li>
-        {%- endfor %}
+        {%- if theme_nav_bar_display_parents %}
+          {%- for parent in parents %}
+            <li class="md-tabs__item"><a href="{{ parent.link|e }}" class="md-tabs__link">{{ parent.title }}</a></li>
+          {%- endfor %}
+        {%- endif %}
       </ul>
     </div>
   </nav>
