--- a/openff_sphinx_theme/openff_sphinx_theme/relbar.html
+++ b/openff_sphinx_theme/openff_sphinx_theme/relbar.html
@@ -14,6 +14,7 @@
         {%- for parent in parents %}
           <li class="md-tabs__item"><a href="{{ parent.link|e }}" class="md-tabs__link">{{ parent.title }}</a></li>
         {%- endfor %}
+          <li class="md-tabs__item"><a href="#" class="md-tabs__link">{{ title }}</a></li>
       </ul>
     </div>
   </nav>
