Add colours, change monospace font

--- a/openff_sphinx_theme/openff_sphinx_theme/layout.html
+++ b/openff_sphinx_theme/openff_sphinx_theme/layout.html
@@ -23,15 +23,7 @@
 
   {% block font %}
     <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700&display=fallback" rel="stylesheet">
-
-    <style>
-      code,
-      kbd,
-      pre {
-        font-family: "Roboto Mono", "Courier New", Courier, monospace
-      }
-    </style>
+    <link href="https://fonts.googleapis.com/css?family=PT+Mono:400,500,700&display=fallback" rel="stylesheet">
   {% endblock %}
 
   <link rel="stylesheet" href="{{ pathto('_static/stylesheets/application.css', 1) }}"/>
