--- a/openff_sphinx_theme/openff_sphinx_theme/layout.html
+++ b/openff_sphinx_theme/openff_sphinx_theme/layout.html
@@ -31,7 +31,6 @@
   <link rel="stylesheet" href="{{ pathto('_static/fonts/material-icons.css', 1) }}"/>
   {% endblock %}
   <meta name="theme-color" content="#015480;">
-  <script src="{{ pathto('_static/javascripts/modernizr.js', 1) }}"></script>
   {% include "google_analytics.html" %}
   {% if theme_touch_icon %}
     <link rel="apple-touch-icon" href="{{ pathto('_static/' ~ theme_touch_icon, 1) }}"/>
@@ -64,10 +63,10 @@
       {% endif %}
     </defs>
   </svg>
-  {% endif %}
-  <input class="md-toggle" data-md-toggle="drawer" type="checkbox" id="__drawer">
+  {% endif %}<!--
+  <input class="md-toggle" data-md-toggle="drawer" type="checkbox" id="__drawer"> -->
   <input class="md-toggle" data-md-toggle="search" type="checkbox" id="__search">
-  <label class="md-overlay" data-md-component="overlay" for="__drawer"></label>
+  <!-- <label class="md-overlay" data-md-component="overlay" for="__drawer"></label> -->
   <a href="#{{ pagename }}" tabindex="1" class="md-skip"> Skip to content </a>
   {% include "header.html" %}
 {% endblock %}
@@ -85,6 +84,9 @@
     <main class="md-main">
       <div class="md-main__inner md-grid" data-md-component="container">
         {% block site_nav %}
+        <div class="md-sidebars">
+          <input class="md-toggle" data-md-toggle="drawer" type="checkbox" id="__drawer">
+          <label class="md-overlay" data-md-component="overlay" for="__drawer"></label>
           <div class="md-sidebar md-sidebar--primary" data-md-component="navigation">
             <div class="md-sidebar__scrollwrap">
               <div class="md-sidebar__inner">
@@ -99,6 +101,7 @@
               </div>
             </div>
           </div>
+        </div>
         {% endblock %}
         <div class="md-content">
           <article class="md-content__inner md-typeset" role="main">
@@ -178,8 +181,5 @@
       </div>
     </div>
   </footer>
-  {%- block footer_scripts %}
-  <script src="{{ pathto('_static/javascripts/application.js', 1) }}"></script>
-  <script>app.initialize({version: "1.0.4", url: {base: ".."}})</script>
-  {%- endblock %}
+
 {%- endblock %}
