--- a/openff_sphinx_theme/openff_sphinx_theme/layout.html
+++ b/openff_sphinx_theme/openff_sphinx_theme/layout.html
@@ -63,10 +63,10 @@
       {% endif %}
     </defs>
   </svg>
-  {% endif %}<!--
-  <input class="md-toggle" data-md-toggle="drawer" type="checkbox" id="__drawer"> -->
+  {% endif %}
+  <input class="md-toggle" data-md-toggle="drawer" type="checkbox" id="__drawer">
   <input class="md-toggle" data-md-toggle="search" type="checkbox" id="__search">
-  <!-- <label class="md-overlay" data-md-component="overlay" for="__drawer"></label> -->
+  <label class="md-overlay" data-md-component="overlay" for="__drawer"></label>
   <a href="#{{ pagename }}" tabindex="1" class="md-skip"> Skip to content </a>
   {% include "header.html" %}
 {% endblock %}
@@ -84,9 +84,6 @@
     <main class="md-main">
       <div class="md-main__inner md-grid" data-md-component="container">
         {% block site_nav %}
-        <div class="md-sidebars">
-          <input class="md-toggle" data-md-toggle="drawer" type="checkbox" id="__drawer">
-          <label class="md-overlay" data-md-component="overlay" for="__drawer"></label>
           <div class="md-sidebar md-sidebar--primary" data-md-component="navigation">
             <div class="md-sidebar__scrollwrap">
               <div class="md-sidebar__inner">
@@ -101,7 +98,6 @@
               </div>
             </div>
           </div>
-        </div>
         {% endblock %}
         <div class="md-content">
           <article class="md-content__inner md-typeset" role="main">
